JPARepository implementation in service and controller