@@ -1,9 +1,10 @@
-package fg.forrest.namedayapp.nameday.service.txtserviceimpl;
+package fg.forrest.namedayapp.nameday.service.serviceimpl;
 
 import fg.forrest.namedayapp.nameday.model.Nameday;
 import fg.forrest.namedayapp.nameday.exception.FileParsingException;
+import fg.forrest.namedayapp.nameday.repository.NamedayRepository;
 import fg.forrest.namedayapp.nameday.service.NamedayService;
-import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ResourceUtils;
@@ -21,27 +22,52 @@ import java.time.format.DateTimeParseException;
 import java.util.*;
 
 @Service
-@Qualifier("txtNamedayService")
-public class TxtNamedayServiceImpl implements NamedayService {
+//@Qualifier("txtNamedayService")
+public class NamedayServiceImpl implements NamedayService {
 
+    private List<Nameday> namedays;
 
-    public List<Nameday> getNameday() throws IOException {
+    private final String FILE_PATH = "src/main/resources/namedays.txt";
+
+    @Autowired
+    NamedayRepository namedayRepository;
+
+    /**
+     * Method to get today's nameday from MySQL database
+     * in comment there is older code to get today's nameday from txt file
+     * @return
+     * @throws IOException
+     */
+    @Override
+    public List<Nameday> getTodayNameday() throws IOException {
         LocalDate today = LocalDate.now();
         List<Nameday> todayNamedays;
-        try {
-            todayNamedays = loadNamedaysFromFile(today);
-        }catch (FileParsingException e){
+        // finding in txt file
+//        try {
+//            todayNamedays = loadNamedaysFromFile(today);
+//        } catch (NullPointerException  e) {
+//            throw new FileParsingException("Today's nameday is null" + e.getMessage());
+//        }
+        // now finding in MySQL db
+        todayNamedays = namedayRepository.findByDate(today);
+        if (todayNamedays.isEmpty()){
             throw new FileParsingException("Today's nameday is null");
         }
         return todayNamedays;
     }
 
+    /**
+     * Method for loading namedays from file (used before working with MySQL database)
+     * @param date
+     * @return List<Nameday> namedays - loaded from file
+     * @throws IOException
+     */
     @Scheduled(fixedDelay = 10000)
     public List<Nameday> loadNamedaysFromFile(LocalDate date) throws IOException {
         List<Nameday> namedays = new ArrayList<>();
         String namedayFileContent;
         String[] namedayLines;
-        File file = ResourceUtils.getFile("src/main/resources/namedays.txt"); //classpath:namedays.txt
+        File file = ResourceUtils.getFile(FILE_PATH); //classpath:namedays.txt
         InputStream inputStream = Files.newInputStream(Path.of(file.getPath()));
         try {
             namedayFileContent = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
@@ -56,7 +82,7 @@ public class TxtNamedayServiceImpl implements NamedayService {
                     }
                 }
             }
-            if(namedays.isEmpty()){
+            if (namedays.isEmpty()) {
                 throw new FileParsingException("Namedays are empty");
             }
         } catch (DateTimeParseException | ArrayIndexOutOfBoundsException e) {
@@ -65,6 +91,12 @@ public class TxtNamedayServiceImpl implements NamedayService {
         return namedays;
     }
 
+    /**
+     * Method to parse namedays during update txt DBfile
+     * Looking for file format <nameday>:yyyy-mm-dd\n
+     * @param contents - String with namedays and dates in format <nameday>:yyyy-mm-dd\n
+     * @return list of namedays
+     */
     @Override
     public List<Nameday> parseNamedays(String contents) {
         List<Nameday> namedays = new ArrayList<>();
@@ -79,15 +111,20 @@ public class TxtNamedayServiceImpl implements NamedayService {
                     namedays.add(new Nameday(date, namedayString));
                 }
             }
-            if (namedays.isEmpty()){
+            if (namedays.isEmpty()) {
                 throw new FileParsingException("Namedays are empty");
             }
-        }catch (DateTimeParseException e){
-            throw new FileParsingException("Error in parsing file " + e.getMessage(),e);
+        } catch (DateTimeParseException e) {
+            throw new FileParsingException("Error in parsing file " + e.getMessage(), e);
         }
         return namedays;
     }
 
+    /**
+     * Method to validate namedays - checking for unique date
+     * @param namedays - list of namedays and dates
+     * @return true if dates are unique
+     */
     @Override
     public boolean validateNamedays(List<Nameday> namedays) {
         Set<LocalDate> uniqueDate = new HashSet<>();
@@ -99,6 +136,12 @@ public class TxtNamedayServiceImpl implements NamedayService {
         return true;
     }
 
+    /**
+     * Method to update - save new file of namedays to local repository - path="src/main/resources/namedays.txt"
+     * @param namedays - list of namedays and dates
+     * @param file - file with namedays in format <nameday>:yyyy-mm-dd\n
+     * @return true if file was saved successfully
+     */
     @Override
     public boolean saveNamedays(List<Nameday> namedays, MultipartFile file) {
         try {
@@ -107,13 +150,22 @@ public class TxtNamedayServiceImpl implements NamedayService {
             for (Nameday nameday : namedays) {
                 stringBuilder.append(nameday.getNameday()).append(":").append(nameday.getDate()).append(System.lineSeparator());
             }
-            Path folderpath = Path.of(ResourceUtils.getFile("src/main/resources/namedays.txt").toURI());
-//            Path path = Paths.get(folderpath + file.getOriginalFilename()); //Path.of(file.getName())
-            Files.write(folderpath, stringBuilder.toString().trim().getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING);
+            Path folderpath = Path.of(ResourceUtils.getFile(FILE_PATH).toURI());
+            Files.writeString(folderpath, stringBuilder.toString().trim(), StandardOpenOption.TRUNCATE_EXISTING);
             return true;
         } catch (IOException e) {
             return false;
         }
+    }
+
+    /**
+     * Method to update MySQL database with new namedays
+     * @param namedays - list of namedays and dates
+     */
+    @Override
+    public void updateNamedayDatabase(List<Nameday> namedays) {
+        namedayRepository.deleteAll();
+        namedayRepository.saveAll(namedays);
     }
 
 }
